# FastTinyEngine

./: .gitignore  CMakeLists.txt  README.md
assets/models/fox_in_a_cape/: model.mtl
assets/shaders/src/: simple_shader.frag  simple_shader.vert
include/: buffer.hpp  camera.hpp  descriptors.hpp  device.hpp  first_app.hpp  frame_info.hpp  game_object.hpp  model.hpp  pipeline.hpp  renderer.hpp  swap_chain.hpp  texture.hpp  utils.hpp  window.hpp
include/systems/: simple_render_system.hpp
src/: buffer.cpp  camera.cpp  descriptors.cpp  device.cpp  first_app.cpp  game_object.cpp  main.cpp  model.cpp  pipeline.cpp  renderer.cpp  swap_chain.cpp  texture.cpp  window.cpp
src/systems/: simple_render_system.cpp
